# rule_rust_mdbook

./: .gitignore  README.md  WORKSPACE.bazel
cargo_mdbook/: BUILD.bazel  BUILD.bzl  BUILD.mdbook.bazel
cargo_remote/: BUILD.bazel  BUILD.names.bazel
