load("@crate_index_cargo_remote//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_binary(
    name = "mdbook_bin",
    srcs = ["src/main.rs"],
    aliases = aliases(
        normal = True,
        proc_macro = True,
    ),
    crate_features = [
    #     "application",
    #     "clap",
        "default",
    ],
    crate_root = "src/main.rs",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    version = "0.4.28",
    deps = all_crate_deps(normal = True) + [
        ":mdbook",
    ],
)

rust_library(
    name = "mdbook",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(
        normal = True,
        proc_macro = True,
    ),
    crate_features = [
    #     "application",
    #     "clap",
        "default",
    ],
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    version = "0.4.28",
    deps = all_crate_deps(normal = True) + [
        ":build-script-build",
    ],
)

cargo_build_script(
    name = "build-script-build",
    srcs = ["src/cmd/build.rs"],
    aliases = aliases(build = True),
    crate_features = [
    #     "application",
    #     "clap",
        "default",
    ],
    crate_name = "build_script_build",
    crate_root = "src/cmd/build.rs",
    edition = "2021",
    version = "0.4.28",
)



# From Rule_rust lift example
# rust_binary(
#     name = "mdbook_bin",
#     srcs = glob(["src/**/*.rs"]),
#     aliases = aliases(
#         normal = True,
#         proc_macro = True,
#     ),
#     crate_features = [
#     #     "application",
#     #     "clap",
#         "default",
#     ],
#     edition = "2021",
#     proc_macro_deps = all_crate_deps(proc_macro = True),
#     version = "0.4.28",
#     deps = all_crate_deps(proc_macro = True, build = True, normal = True) + 
#     [
#         "@crate_index_cargo_mdbook_deps//:clap_complete",
#         "@crate_index_cargo_mdbook_deps//:anyhow",
#         "@crate_index_cargo_mdbook_deps//:log",
#     ],
# )

