load("@crate_index_cargo_remote//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

rust_binary(
    name = "mdbook_bin",
    srcs = ["src/main.rs"],
    compile_data = glob(["src/**/*.rs"]),
    crate_features = [
        "default",
        "serve",
        "search",
    ],
    crate_root = "src/main.rs",
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    version = "0.4.28",
    deps = all_crate_deps(
        proc_macro = True,
    ) + [
        ":mdbook",
        "@crate_index_cargo_mdbook//:anyhow",
        "@crate_index_cargo_mdbook//:chrono",
        "@crate_index_cargo_mdbook//:clap",
        "@crate_index_cargo_mdbook//:clap_complete",
        "@crate_index_cargo_mdbook//:env_logger",
        "@crate_index_cargo_mdbook//:opener",
        "@crate_index_cargo_mdbook//:tokio",
        "@crate_index_cargo_mdbook//:toml",
        "@crate_index_cargo_mdbook//:warp",
        "@crate_index_cargo_mdbook//:futures-util",
        "@crate_index_cargo_mdbook//:log",
    ],
)

rust_library(
    name = "mdbook",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["**"]),
    crate_features = [
        "default",
        "serve",
        "search",
    ],
    edition = "2021",
    version = "0.4.28",
    deps = all_crate_deps(
        build = True,
        normal = True,
        proc_macro = True,
    ) + [
        "@crate_index_cargo_mdbook//:ammonia",
        "@crate_index_cargo_mdbook//:anyhow",
        "@crate_index_cargo_mdbook//:chrono",
        "@crate_index_cargo_mdbook//:clap",
        "@crate_index_cargo_mdbook//:clap_complete",
        "@crate_index_cargo_mdbook//:elasticlunr-rs",
        "@crate_index_cargo_mdbook//:handlebars",
        "@crate_index_cargo_mdbook//:log",
        "@crate_index_cargo_mdbook//:memchr",
        "@crate_index_cargo_mdbook//:once_cell",
        "@crate_index_cargo_mdbook//:opener",
        "@crate_index_cargo_mdbook//:pulldown-cmark",
        "@crate_index_cargo_mdbook//:regex",
        "@crate_index_cargo_mdbook//:serde",
        "@crate_index_cargo_mdbook//:serde_json",
        "@crate_index_cargo_mdbook//:shlex",
        "@crate_index_cargo_mdbook//:tempfile",
        "@crate_index_cargo_mdbook//:toml",
        "@crate_index_cargo_mdbook//:topological-sort",
    ],
)
